# smon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
.github/workflows/: ci.yml
